internal/lint/testdata/net/np/1.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: np1
    namespace: default
  spec:
    podSelector:
      matchLabels:
        app: p1
    policyTypes:
    - Ingress
    - Egress
    ingress:
    - from:
      - ipBlock:
          cidr: 172.1.0.0/16
          except:
          - 172.1.0.0/24
      - namespaceSelector:
          matchLabels:
            ns: default
        podSelector:
          matchLabels:
            app: p1
      ports:
      - protocol: TCP
        port: 6379
    egress:
    - to:
      - ipBlock:
          cidr: 172.1.0.0/16
      ports:
      - protocol: TCP
        port: 5978
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: np2
    namespace: default
  spec:
    ingress:
    - from:
      - ipBlock:
          cidr: 172.1.0.0/16
          except:
          - 172.1.1.0/24
      - namespaceSelector:
          matchLabels:
            app: ns2
        podSelector:
          matchLabels:
            app: p2
      ports:
      - protocol: TCP
        port: 6379
    egress:
    - to:
      - podSelector:
          matchLabels:
            app: p1
      - ipBlock:
          cidr: 172.0.0.0/24
      ports:
      - protocol: TCP
        port: 5978
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: np3
    namespace: default
  spec:
    podSelector:
      matchLabels:
        app: p-bozo
    ingress:
    - from:
      - ipBlock:
          cidr: 172.2.0.0/16
          except:
          - 172.2.1.0/24
      - namespaceSelector:
          matchExpressions:
            - key: app
              operator: In
              values: [ns-bozo]
        podSelector:
          matchLabels:
            app: pod-bozo
      ports:
      - protocol: TCP
        port: 6379
    egress:
    - to:
      - namespaceSelector:
          matchLabels:
            app: ns1
      - podSelector:
          matchLabels:
            app: p1-missing
      - ipBlock:
          cidr: 172.1.0.0/24
      ports:
      - protocol: TCP
        port: 5978
