internal/lint/testdata/net/np/2.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: deny-all
    namespace: default
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: deny-all-ing
    namespace: default
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: deny-all-eg
    namespace: default
  spec:
    podSelector: {}
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: allow-all
    namespace: default
  spec:
    podSelector: {}
    ingress:
    - {}
    egress:
    - {}
    policyTypes:
    - Ingress
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: allow-all-ing
    namespace: default
  spec:
    podSelector: {}
    ingress:
    - {}
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: allow-all-eg
    namespace: default
  spec:
    podSelector: {}
    egress:
    - {}
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: ip-block-all-ing
    namespace: default
  spec:
    podSelector: {}
    egress:
    - to:
      - ipBlock:
          cidr: 172.2.0.0/24
      ports:
      - protocol: TCP
        port: 5978
    policyTypes:
    - Ingress
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: ip-block-all-eg
    namespace: default
  spec:
    podSelector: {}
    ingress:
    - from:
      - ipBlock:
          cidr: 172.2.0.0/24
      ports:
      - protocol: TCP
        port: 5978
    policyTypes:
    - Ingress
    - Egress
