internal/lint/testdata/net/np/3.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: deny-all-ing
    namespace: ns1
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: allow-all-egress
    namespace: ns2
  spec:
    # podSelector:
    # matchLabels:
    #   app: p2
    ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app: ns2
          podSelector:
            matchLabels:
              app: p2
        - podSelector:
            matchLabels:
              app: p2
    egress:
    - {}
    policyTypes:
    - Ingress
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: pod-selecting-np
    namespace: ns3
  spec:
    podSelector:
      matchLabels:
        app: p3
    ingress:
      - from:
          - namespaceSelector:
              matchLabels:
                app: p1
    egress:
      - to:
          - namespaceSelector:
              matchLabels:
                app: p1
    policyTypes:
      - Ingress
      - Egress
