internal/lint/testdata/net/np/blee.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np1
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: p1
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.1.0.0/16
        except:
        - 172.1.0.0/24
    - namespaceSelector:
        matchLabels:
          ns: default
      podSelector:
        matchLabels:
          app: p1
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 172.1.0.0/16
    ports:
    - protocol: TCP
      port: 5978
