internal/lint/testdata/net/np/d.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-d
  namespace: default
spec:
  podSelector:
    podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  - Egress
