internal/lint/testdata/net/np/deny-all-egr.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-eg
spec:
  podSelector: {}
  policyTypes:
  - Egress
