internal/lint/testdata/net/np/deny-all-ing.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ing
spec:
  podSelector: {}
  policyTypes:
  - Ingress
